# gix

./: .gitignore  .gitmodules  Changelog  Makefile  README.md  gix-ide.pro  gix-ide.sln  gix.macos.cf  gixsql.pro  gixsql.sln  issues.csv  prepbuild.cmd  prepbuild.sh
gixsql/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.linux  Makefile.macOS  Makefile.mingw-w64  README  README.md  aclocal.m4  config.h.in  config.status  configure  configure.ac  gixsql.pro  gixsql.sln
gixsql/copy/: SQLCA.cpy
gixsql/gixpp/: Makefile.am  Makefile.in  gixpp.pro  gixpp.vcxproj  gixpp.vcxproj.filters  main.cpp
gixsql/gixsql-tests/: CobolSourceAttribute.cs  CompilerConfig.cs  CompilerConfig2.cs  CompilerType.cs  GixSqlDataSourceAttribute.cs  GixSqlDynamicTestRunner.cs  GixSqlTestBase.cs  GixSqlTestData.cs  GixSqlTestDataSourceClientInfo.cs  GixSqlTestDataSourceInfo.cs  TSQL001.cs  TSQL002.cs  TSQL003.cs  TSQL004.cs  TSQL005.cs  TSQL006.cs  TSQL007.cs  TSQL008.cs  TSQL009.cs  TSQL010.cs  TSQL011.cs  TSQL012.cs  TSQL013.cs  TSQL014.cs  TSQL015.cs  TSQL016.cs  TSQL017.cs  TSQL018.cs  TSQL019.cs  TSQL020.cs  TSQL021.cs  TSQL022.cs  TSQL023.cs  TSQL024.cs  TSQL025.cs  TSQL026.cs  TSQL027.cs  TSQL028.cs  TSQL029.cs  TestMatrixDataProvider.cs  (+6 more)
gixsql/gixsql-tests-nunit/: CompilerConfig.cs  CompilerConfig2.cs  GixSqlDynamicTestRunner.cs  GixSqlTestBase.cs  GixSqlTestDataSourceInfo.cs  HostPlatformAttribute.cs  Options.cs  Runner.cs  TestMatrixDataProvider.cs  Utils.cs  app.config  gixsql-tests-nunit.csproj
gixsql/gixsql-tests-nunit/Properties/: launchSettings.json
gixsql/gixsql-tests-nunit/data/: TEST001.cbl  TSQL001A.cbl  TSQL003B.cbl  TSQL003C.cbl  TSQL004A.cbl  TSQL005A.cbl  TSQL005B.cbl  TSQL014B.cbl  TSQL014D.cbl  TSQL017D.cbl  TSQL017E.cbl  TSQL018A.cbl  TSQL018B.cbl  TSQL019A.cbl  TSQL019B.cbl  TSQL022A.cbl  TSQL022B.cbl  TSQL024A.cbl  TSQL025A.cbl  TSQL027A.cbl  TSQL028A.cbl  TSQL031A.cbl  TSQL034A.cbl  TSQL035A.cbl  dbdata-012.sql  dbdata-016.sql  dbdata-017.sql  gixsql_test_data.xml
gixsql/gixsql-tests/data/: EMPREC.cpy  TSQL001A.cbl  TSQL002A.cbl  TSQL003A.cbl  TSQL003B.cbl  TSQL003C.cbl  TSQL004A.cbl  TSQL005C.cbl  TSQL006A.cbl  TSQL006B.cbl  TSQL007A.cbl  TSQL008A.cbl  TSQL010A.cbl  TSQL012A.cbl  TSQL014A.cbl  TSQL014C.cbl  TSQL015A.cbl  TSQL016A.cbl  TSQL017A.cbl  TSQL017B.cbl  TSQL017C.cbl  TSQL019A.cbl  TSQL019B.cbl  TSQL021A.cbl  TSQL021B.cbl  TSQL021C.cbl  TSQL022C.cbl  TSQL023A.cbl  TSQL023B.cbl  TSQL024A.cbl  TSQL025A.cbl  TSQL026A.cbl  TSQL027A.cbl  TSQL029A.cbl  TSQL030A.cbl  TSQL031A.cbl  TSQL033A.cbl  dbdata-012-oracle.sql  dbdata-016-oracle.sql  dbdata-oracle.sql
gixsql/libcpputils/: CopyResolver.cpp  CopyResolver.h  Makefile.am  Makefile.in  libcpputils.cpp  libcpputils.h  libcpputils.pro  libcpputils.vcxproj
gixsql/libcpputils/linq/: linq_groupby.hpp  linq_iterators.hpp
gixsql/libgixpp/: ESQLCall.cpp  ESQLCall.h  ESQLDefinitions.h  FileData.cpp  GixEsqlLexer.cpp  GixEsqlLexer.hh  GixPreProcessor.cpp  GixPreProcessor.h  ITransformationStep.cpp  Makefile.am  Makefile.in  MapFileReader.cpp  TPESQLProcessing.cpp  TPESQLProcessing.h  bison.pri  cobol_var_types.h  gix_esql_driver.cc  gix_esql_driver.hh  gix_esql_parser.cc  gix_esql_parser.hh  gix_esql_parser.yy  gix_esql_scanner.cc  gix_esql_scanner.ll  libgixpp.h  libgixpp.pro  libgixpp.vcxproj  libgixpp.vcxproj.filters
gixsql/libgixsql/: Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionString.cpp  ConnectionString.h  Cursor.cpp  Cursor.h  CursorManager.cpp  CursorManager.h  DataSourceInfo.cpp  DbInterface.cpp  DbInterfaceFactory.cpp  DbInterfaceFactory.h  IConnection.h  IConnectionString.h  ICursor.h  IDataSourceInfo.h  IDbInterface.h  IDbManagerInterface.h  ILogger.h  ISchemaManager.h  Logger.cpp  Logger.h  Makefile  Makefile.linux  Makefile.macOS  Makefile.mingw-w64  SqlVar.cpp  SqlVar.h  SqlVarList.cpp  SqlVarList.h  dllmain.cpp  gixsql.cpp  gixsql.h  libgixsql-cpp.vcxproj  libgixsql-cpp.vcxproj.filters  libgixsql.pro  platform.cpp  platform.h  (+4 more)
gixsql/libgixsql-mysql/: DbInterfaceManagerMySQL.cpp  DbInterfaceMySQL.cpp  DbInterfaceMySQL.h  Makefile  Makefile.linux  Makefile.macOS  Makefile.mingw-w64  dblib.cpp  libgixsql-mysql.pro  libgixsql-mysql.vcxproj  utils.cpp  utils.h
gixsql/libgixsql-odbc/: DbInterfaceManagerODBC.cpp  DbInterfaceODBC.cpp  DbInterfaceODBC.h  Makefile  Makefile.linux  Makefile.macOS  Makefile.mingw-w64  dblib.cpp  libgixsql-odbc.pro  libgixsql-odbc.vcxproj  utils.cpp  utils.h
gixsql/libgixsql-pgsql/: DbInterfaceManagerPGSQL.cpp  DbInterfacePGSQL.cpp  DbInterfacePGSQL.h  Makefile  Makefile.linux  Makefile.macOS  Makefile.mingw-w64  dblib.cpp  libgixsql-pgsql.pro  libgixsql-pgsql.vcxproj  utils.cpp  utils.h
gixsql/misc/: gixsql-wrapper
gixsql/runtime/copy/: SQLCA.cpy
gixsql/runtime/libgixsql/: Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  Cursor.cpp  Cursor.h  CursorManager.cpp  CursorManager.h  DataSourceInfo.cpp  DataSourceInfo.h  DbInterfaceFactory.cpp  DbInterfaceFactory.h  IConnection.h  IConnectionOptions.cpp  ICursor.h  sqlca.h  (+24 more)
gixsql/runtime/libgixsql-mysql/: DbInterfaceMySQL.cpp  DbInterfaceMySQL.h  Makefile.am  Makefile.in  dblib.cpp  libgixsql-mysql.pro  libgixsql-mysql.vcxproj  utils.cpp  utils.h
gixsql/runtime/libgixsql-odbc/: DbInterfaceManagerODBC.cpp  DbInterfaceODBC.cpp  DbInterfaceODBC.h  Makefile.am  Makefile.in  dblib.cpp  libgixsql-odbc.pro  libgixsql-odbc.vcxproj  utils.cpp  utils.h
gixsql/runtime/libgixsql-oracle/: DbInterfaceManagerOracle.cpp  DbInterfaceOracle.cpp  DbInterfaceOracle.h  Makefile.am  dblib.cpp  libgixsql-oracle.vcxproj  libgixsql-oracle.vcxproj.filters  utils.cpp  utils.h
gixsql/runtime/libgixsql-pgsql/: DbInterfaceManagerPGSQL.cpp  DbInterfacePGSQL.cpp  DbInterfacePGSQL.h  Makefile.am  Makefile.in  dblib.cpp  libgixsql-pgsql.pro  libgixsql-pgsql.vcxproj  utils.h
gixsql/runtime/libgixsql-sqlite/: DbInterfaceManagerSQLite.cpp  DbInterfaceSQLite.cpp  DbInterfaceSQLite.h  Makefile.am  dblib.cpp  libgixsql-sqlite.vcxproj  libgixsql-sqlite.vcxproj.filters  utils.h
(+756 files in other folders)
