## Process this file with automake to generate a Makefile.in

lib_LTLIBRARIES = libgixsql.la 
libgixsql_la_SOURCES = Connection.cpp  ConnectionManager.cpp  Cursor.cpp  CursorManager.cpp  DataSourceInfo.cpp  DbInterfaceFactory.cpp  dllmain.cpp  gixsql.cpp  Logger.cpp  platform.cpp  SqlVar.cpp  SqlVarList.cpp  utils.cpp


